test/Assertions.gold
Error in Assertions.os, 4.3:
Assertion failed: ((4 + 3) > 8)
