test/Assertions.os
proc main: void()
{
  assert(5 > 4);
  assert(4 + 3 > 8);  //this assertion should fail
}
